--- a/food-db-pandas/food-dataset-pandas.ipynb
+++ b/food-db-pandas/food-dataset-pandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -33,34 +33,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>NOMBRE</th>\n",
-       "      <th>WATER_PERCENTAGE</th>\n",
-       "      <th>CALORIES_KCAL</th>\n",
-       "      <th>PROTEIN_G</th>\n",
-       "      <th>TOTAL_FAT_G</th>\n",
-       "      <th>CARBOHYDRATES_G</th>\n",
-       "      <th>TOTAL_FIBER_G</th>\n",
-       "      <th>CALCIUM_MG</th>\n",
-       "      <th>PHOSPHORUS_MG</th>\n",
-       "      <th>IRON_MG</th>\n",
-       "      <th>THIAMINE_MG</th>\n",
-       "      <th>RIBOFLAVIN_MG</th>\n",
-       "      <th>NIACIN_MG</th>\n",
-       "      <th>VITAMIN_C_MG</th>\n",
-       "      <th>VITAMIN_A_MCG</th>\n",
-       "      <th>MONOUNSATURATED_FAT_G</th>\n",
-       "      <th>POLYUNSATURATED_FAT_G</th>\n",
-       "      <th>SATURATED_FAT_G</th>\n",
-       "      <th>CHOLESTEROL_MG</th>\n",
-       "      <th>POTASSIUM_MG</th>\n",
-       "      <th>SODIUM_MG</th>\n",
-       "      <th>ZINC_MG</th>\n",
-       "      <th>MAGNESIUM_MG</th>\n",
-       "      <th>VITAMIN_B6_MG</th>\n",
-       "      <th>VITAMIN_B12_MCG</th>\n",
-       "      <th>FOLIC_ACID_MCG</th>\n",
-       "      <th>FOLATE_EQUIV_FD</th>\n",
-       "      <th>EDIBLE_FRACTION_PERCENTAGE</th>\n",
+       "      <th>name</th>\n",
+       "      <th>waterPercentage</th>\n",
+       "      <th>caloriesKcal</th>\n",
+       "      <th>proteinG</th>\n",
+       "      <th>totalFatG</th>\n",
+       "      <th>carbohydratesG</th>\n",
+       "      <th>dietaryFiberG</th>\n",
+       "      <th>calciumMg</th>\n",
+       "      <th>phosphorusMg</th>\n",
+       "      <th>ironMg</th>\n",
+       "      <th>thiamineMg</th>\n",
+       "      <th>riboflavinMg</th>\n",
+       "      <th>niacinMg</th>\n",
+       "      <th>vitaminCmg</th>\n",
+       "      <th>vitaminAEquivRetinolMcg</th>\n",
+       "      <th>monounsaturatedFatG</th>\n",
+       "      <th>polyunsaturatedFatG</th>\n",
+       "      <th>saturatedFatG</th>\n",
+       "      <th>cholesterolMg</th>\n",
+       "      <th>potassiumMg</th>\n",
+       "      <th>sodiumMg</th>\n",
+       "      <th>zincMg</th>\n",
+       "      <th>magnesiumMg</th>\n",
+       "      <th>vitaminB6Mg</th>\n",
+       "      <th>vitaminB12Mcg</th>\n",
+       "      <th>folicAcidMcg</th>\n",
+       "      <th>folateEquivFDMcg</th>\n",
+       "      <th>edibleFractionPercentage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -224,54 +224,47 @@
        "</div>"
       ],
       "text/plain": [
-       "                              NOMBRE  WATER_PERCENTAGE  CALORIES_KCAL  \\\n",
-       "0      «CSB» CORN SOY BLEND (PL 480)              9.70            376   \n",
-       "1       «CSM» CORN SOY MILK (PL 480)              8.43            375   \n",
-       "2     «WSB» WHEAT SOY BLEND (PL 480)              8.80            355   \n",
-       "3  «WSM» WHEAT SOY AND MILK (PL 480)              7.92            358   \n",
-       "4                  ABERIA/KITEMBILLA             82.80             63   \n",
+       "                                name  waterPercentage  caloriesKcal  proteinG  \\\n",
+       "0      «CSB» CORN SOY BLEND (PL 480)             9.70           376     17.20   \n",
+       "1       «CSM» CORN SOY MILK (PL 480)             8.43           375     21.35   \n",
+       "2     «WSB» WHEAT SOY BLEND (PL 480)             8.80           355     21.50   \n",
+       "3  «WSM» WHEAT SOY AND MILK (PL 480)             7.92           358     25.08   \n",
+       "4                  ABERIA/KITEMBILLA            82.80            63      1.20   \n",
        "\n",
-       "   PROTEIN_G  TOTAL_FAT_G  CARBOHYDRATES_G  TOTAL_FIBER_G  CALCIUM_MG  \\\n",
-       "0      17.20         6.90            61.70           9.00       831.0   \n",
-       "1      21.35         6.76            57.84           7.89      1020.0   \n",
-       "2      21.50         5.90            46.90          13.18       842.0   \n",
-       "3      25.08         5.82            43.31          10.44      1031.0   \n",
-       "4       1.20         0.80            14.60           0.00        13.0   \n",
+       "   totalFatG  carbohydratesG  dietaryFiberG  calciumMg  phosphorusMg  ironMg  \\\n",
+       "0       6.90           61.70           9.00      831.0         206.0   17.49   \n",
+       "1       6.76           57.84           7.89     1020.0         339.0   17.54   \n",
+       "2       5.90           46.90          13.18      842.0         294.0   17.85   \n",
+       "3       5.82           43.31          10.44     1031.0         394.0   17.90   \n",
+       "4       0.80           14.60           0.00       13.0          26.0    1.20   \n",
        "\n",
-       "   PHOSPHORUS_MG  IRON_MG  THIAMINE_MG  RIBOFLAVIN_MG  NIACIN_MG  \\\n",
-       "0          206.0    17.49         0.53           0.48       6.23   \n",
-       "1          339.0    17.54         0.59           0.71       6.37   \n",
-       "2          294.0    17.85         0.54           0.50       8.19   \n",
-       "3          394.0    17.90         0.60           0.73       8.33   \n",
-       "4           26.0     1.20         0.02           0.04       0.30   \n",
+       "   thiamineMg  riboflavinMg  niacinMg  vitaminCmg  vitaminAEquivRetinolMcg  \\\n",
+       "0        0.53          0.48      6.23        40.0                    784.0   \n",
+       "1        0.59          0.71      6.37        41.0                    846.0   \n",
+       "2        0.54          0.50      8.19        40.0                    698.0   \n",
+       "3        0.60          0.73      8.33        41.0                    699.0   \n",
+       "4        0.02          0.04      0.30        98.0                      0.0   \n",
        "\n",
-       "   VITAMIN_C_MG  VITAMIN_A_MCG  MONOUNSATURATED_FAT_G  POLYUNSATURATED_FAT_G  \\\n",
-       "0          40.0          784.0                    0.0                    0.0   \n",
-       "1          41.0          846.0                    0.0                    0.0   \n",
-       "2          40.0          698.0                    0.0                    0.0   \n",
-       "3          41.0          699.0                    0.0                    0.0   \n",
-       "4          98.0            0.0                    0.0                    0.0   \n",
+       "   monounsaturatedFatG  polyunsaturatedFatG  saturatedFatG  cholesterolMg  \\\n",
+       "0                  0.0                  0.0            0.0            0.0   \n",
+       "1                  0.0                  0.0            0.0            0.0   \n",
+       "2                  0.0                  0.0            0.0            0.0   \n",
+       "3                  0.0                  0.0            0.0            0.0   \n",
+       "4                  0.0                  0.0            0.0            0.0   \n",
        "\n",
-       "   SATURATED_FAT_G  CHOLESTEROL_MG  POTASSIUM_MG  SODIUM_MG  ZINC_MG  \\\n",
-       "0              0.0             0.0         634.0        7.0     5.00   \n",
-       "1              0.0             0.0         879.0       87.0     5.51   \n",
-       "2              0.0             0.0         694.0       14.0     5.50   \n",
-       "3              0.0             0.0          92.0      902.0     5.83   \n",
-       "4              0.0             0.0           0.0        0.0     0.00   \n",
+       "   potassiumMg  sodiumMg  zincMg  magnesiumMg  vitaminB6Mg  vitaminB12Mcg  \\\n",
+       "0        634.0       7.0    5.00        174.0         0.00            1.0   \n",
+       "1        879.0      87.0    5.51        184.0         0.51            1.6   \n",
+       "2        694.0      14.0    5.50        227.0         0.47            1.0   \n",
+       "3         92.0     902.0    5.83        219.0         0.48            1.6   \n",
+       "4          0.0       0.0    0.00          0.0         0.00            0.0   \n",
        "\n",
-       "   MAGNESIUM_MG  VITAMIN_B6_MG  VITAMIN_B12_MCG  FOLIC_ACID_MCG  \\\n",
-       "0         174.0           0.00              1.0             0.0   \n",
-       "1         184.0           0.51              1.6             0.0   \n",
-       "2         227.0           0.47              1.0             0.0   \n",
-       "3         219.0           0.48              1.6             0.0   \n",
-       "4           0.0           0.00              0.0             0.0   \n",
-       "\n",
-       "   FOLATE_EQUIV_FD  EDIBLE_FRACTION_PERCENTAGE  \n",
-       "0              0.0                        1.00  \n",
-       "1              0.0                        1.00  \n",
-       "2              0.0                        1.00  \n",
-       "3              0.0                        1.00  \n",
-       "4              0.0                        0.98  "
+       "   folicAcidMcg  folateEquivFDMcg  edibleFractionPercentage  \n",
+       "0           0.0               0.0                      1.00  \n",
+       "1           0.0               0.0                      1.00  \n",
+       "2           0.0               0.0                      1.00  \n",
+       "3           0.0               0.0                      1.00  \n",
+       "4           0.0               0.0                      0.98  "
       ]
      },
      "metadata": {},
@@ -302,41 +295,142 @@
     "df.fillna(0, inplace=True)\n",
     "\n",
     "df.rename(columns={\n",
-    "   'Producto': 'NAME',\n",
-    "   'Agua\\n%': 'WATER_PERCENTAGE',\n",
-    "   'Kcal.\\nEnergía': 'CALORIES_KCAL',\n",
-    "   'g\\nProteina': 'PROTEIN_G',\n",
-    "   'g\\nGrasa Total': 'TOTAL_FAT_G',\n",
-    "   'g\\nCarbo-hidratos': 'CARBOHYDRATES_G',\n",
-    "   'g\\nFibra Diet.\\ntotal': 'TOTAL_FIBER_G',\n",
-    "   'mg\\nCalcio': 'CALCIUM_MG',\n",
-    "   'mg\\nFosforo': 'PHOSPHORUS_MG',\n",
-    "   'mg\\nHierro': 'IRON_MG',\n",
-    "   'mg\\nTiamina': 'THIAMINE_MG',\n",
-    "   'mg\\nRiboflavina': 'RIBOFLAVIN_MG',\n",
-    "   'mg\\nNiacina': 'NIACIN_MG',\n",
-    "   'mg\\nVit. C': 'VITAMIN_C_MG',\n",
-    "   'mcg\\nVit. A Equiv.\\nRetinol': 'VITAMIN_A_MCG',\n",
-    "   'g\\nÁc. grasos\\nmono-insat.': 'MONOUNSATURATED_FAT_G',\n",
-    "   'g\\nÁc. grasos\\npoli-insat.': 'POLYUNSATURATED_FAT_G',\n",
-    "   'g\\nÁc. Grasos\\nsaturados': 'SATURATED_FAT_G',\n",
-    "   'mg\\nColesterol': 'CHOLESTEROL_MG',\n",
-    "   'mg\\nPotasio': 'POTASSIUM_MG',\n",
-    "   'mg\\nSodio': 'SODIUM_MG',\n",
-    "   'mg\\nZinc': 'ZINC_MG',\n",
-    "   'mg\\nMagnesio': 'MAGNESIUM_MG',\n",
-    "   'mg\\nVit. B6': 'VITAMIN_B6_MG',\n",
-    "   'mcg\\nVit. B12': 'VITAMIN_B12_MCG',\n",
-    "   'mcg\\nAc. Fólico': 'FOLIC_ACID_MCG',\n",
-    "   'mcg\\nFolato\\nEquiv. FD': 'FOLATE_EQUIV_FD',\n",
-    "   '%\\nFracción\\nComestible': 'EDIBLE_FRACTION_PERCENTAGE',\n",
+    "   'NOMBRE': 'name',\n",
+    "   'Agua\\n%': 'waterPercentage',\n",
+    "   'Kcal.\\nEnergía': 'caloriesKcal',\n",
+    "   'g\\nProteina': 'proteinG',\n",
+    "   'g\\nGrasa Total': 'totalFatG',\n",
+    "   'g\\nCarbo-hidratos': 'carbohydratesG',\n",
+    "   'g\\nFibra Diet.\\ntotal': 'dietaryFiberG',\n",
+    "   'mg\\nCalcio': 'calciumMg',\n",
+    "   'mg\\nFosforo': 'phosphorusMg',\n",
+    "   'mg\\nHierro': 'ironMg',\n",
+    "   'mg\\nTiamina': 'thiamineMg',\n",
+    "   'mg\\nRiboflavina': 'riboflavinMg',\n",
+    "   'mg\\nNiacina': 'niacinMg',\n",
+    "   'mg\\nVit. C': 'vitaminCmg',\n",
+    "   'mcg\\nVit. A Equiv.\\nRetinol': 'vitaminAEquivRetinolMcg',\n",
+    "   'g\\nÁc. grasos\\nmono-insat.': 'monounsaturatedFatG',\n",
+    "   'g\\nÁc. grasos\\npoli-insat.': 'polyunsaturatedFatG',\n",
+    "   'g\\nÁc. Grasos\\nsaturados': 'saturatedFatG',\n",
+    "   'mg\\nColesterol': 'cholesterolMg',\n",
+    "   'mg\\nPotasio': 'potassiumMg',\n",
+    "   'mg\\nSodio': 'sodiumMg',\n",
+    "   'mg\\nZinc': 'zincMg',\n",
+    "   'mg\\nMagnesio': 'magnesiumMg',\n",
+    "   'mg\\nVit. B6': 'vitaminB6Mg',\n",
+    "   'mcg\\nVit. B12': 'vitaminB12Mcg',\n",
+    "   'mcg\\nAc. Fólico': 'folicAcidMcg',\n",
+    "   'mcg\\nFolato\\nEquiv. FD': 'folateEquivFDMcg',\n",
+    "   '%\\nFracción\\nComestible': 'edibleFractionPercentage',\n",
     "   }, inplace=True)\n",
     "\n",
-    "display(df.head())\n",
-    "\n",
+    "display(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df.to_csv('./datasets/tabla-alimentos_procesada.csv', index=False)\n",
     "\n",
-    "df.to_json('./datasets/tabla-alimentos_procesada.json', orient='records', lines=True)\n"
+    "df.to_json('./datasets/tabla-alimentos_procesada.json', orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "private double name;\n",
+      "private double waterPercentage;\n",
+      "private double caloriesKcal;\n",
+      "private double proteinG;\n",
+      "private double totalFatG;\n",
+      "private double carbohydratesG;\n",
+      "private double dietaryFiberG;\n",
+      "private double calciumMg;\n",
+      "private double phosphorusMg;\n",
+      "private double ironMg;\n",
+      "private double thiamineMg;\n",
+      "private double riboflavinMg;\n",
+      "private double niacinMg;\n",
+      "private double vitaminCmg;\n",
+      "private double vitaminAEquivRetinolMcg;\n",
+      "private double monounsaturatedFatG;\n",
+      "private double polyunsaturatedFatG;\n",
+      "private double saturatedFatG;\n",
+      "private double cholesterolMg;\n",
+      "private double potassiumMg;\n",
+      "private double sodiumMg;\n",
+      "private double zincMg;\n",
+      "private double magnesiumMg;\n",
+      "private double vitaminB6Mg;\n",
+      "private double vitaminB12Mcg;\n",
+      "private double folicAcidMcg;\n",
+      "private double folateEquivFDMcg;\n",
+      "private double edibleFractionPercentage;\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = df.columns.tolist()\n",
+    "\n",
+    "for i in columns :\n",
+    "    print('private double ' + i + ';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String name;\n",
+      "String waterPercentage;\n",
+      "String caloriesKcal;\n",
+      "String proteinG;\n",
+      "String totalFatG;\n",
+      "String carbohydratesG;\n",
+      "String dietaryFiberG;\n",
+      "String calciumMg;\n",
+      "String phosphorusMg;\n",
+      "String ironMg;\n",
+      "String thiamineMg;\n",
+      "String riboflavinMg;\n",
+      "String niacinMg;\n",
+      "String vitaminCmg;\n",
+      "String vitaminAEquivRetinolMcg;\n",
+      "String monounsaturatedFatG;\n",
+      "String polyunsaturatedFatG;\n",
+      "String saturatedFatG;\n",
+      "String cholesterolMg;\n",
+      "String potassiumMg;\n",
+      "String sodiumMg;\n",
+      "String zincMg;\n",
+      "String magnesiumMg;\n",
+      "String vitaminB6Mg;\n",
+      "String vitaminB12Mcg;\n",
+      "String folicAcidMcg;\n",
+      "String folateEquivFDMcg;\n",
+      "String edibleFractionPercentage;\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = df.columns.tolist()\n",
+    "\n",
+    "for i in columns :\n",
+    "    print('String ' + i + ';')"
    ]
   }
  ],
